images vertical-align fix for IE

--- a/public/stylesheets/sass/public.sass
+++ b/public/stylesheets/sass/public.sass
@@ -22,7 +22,7 @@ div.imageholder
   background-color: #e6e6e6
   text-align: center
   a img
-    vertical-align: top
+    vertical-align: text-top
     border: 2px solid #007700
 
 // TODO: refactor?
